	can now (optionally) be given as separate parameters instead of as
	a part of the configuration URL

	* caldav/objects.py: By now it's sufficient to pass the base URL
	while initializing the DAVClient object.  The library will find
	the principal URL and home calendar set URL through GETPROP

	* caldav/objects.py (Principal, CalendarSet): created a method
	calendar() to make it easier to generate a calendar object.  The
	method does not do any communication towards the server.

	* tests/test_caldav.py: all broken tests have been disabled.
	Temporary made smaller tests to demonstrate what is actually
	working on all caldav servers I've tested against (Zimbra,
	DAViCal, Baikal and SoGo).

	* caldav/objects.py (DAVObject): (internal change) set __str__ and
	__repr__ to make debugging easier

	* caldav/objects.py: (internal change) Since the principal path and the calendar
	home set path are different on most CALDav server implementations,
	a new class CalendarSet has been made.

	* caldav/lib/url.py: (internal change) Complete rewrite and
	API-change. internally all URLs are now handled as objects

	* caldav/objects.py (Principal): (internal change) made it
	possible to set principal.calendar_home_set (hardly useful except
	for from the unit testing code).

	* All files: misc minor changes to reflect all the changes above.

2011-01-22  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/elements/cdav.py (Expand.__init__, 
							   TimeRange.__init__) : Fixed strftime fmt.

2010-10-09  Cyril Robert <cyrilrbt@gmail.com>

	* All files: Made PEP8 compliant 

2010-10-04  Olivier Larchevêque <olivier.larcheveque@gmail.com>

    * caldav/davclient.py (DAVClient.request): fix headers merge before sending request
    * caldav/objects.py (Event.__init__): fix for respecting davobject signature

2010-07-15  Cyril Robert <cyrilrbt@gmail.com>

	* caldav/davclient.py (DAVClient.__init__): Fixed an issue with usernames
	that contain a '@'.
	Thanks to the reporter of issue #2
